--- a/app/templates/macros/nav_macros.html
+++ b/app/templates/macros/nav_macros.html
@@ -21,7 +21,7 @@
 
 {% macro header_items(current_user) %}
     {% set endpoints = [
-      ('main.index', config.APP_NAME, 'home'),
+      ('task.get_my_doc_meta', config.APP_NAME, 'home'),
       ('main.about', 'About', 'info')
     ]%}
     {% set user = [] %}
