--- a/app/templates/task/document_dashboard.html
+++ b/app/templates/task/document_dashboard.html
@@ -4,7 +4,14 @@
         <h2 class="ui header">
             My Documents
         </h2>
-
+        <div class="ui vertical animated right floated button" tabindex="0">
+            <a class="item" href="{{ url_for('task.new_doc_meta') }}">
+                <div class="hidden content">New</div>
+                <div class="visible content">
+                    <i class="large plus circle icon"></i>
+                </div>
+            </a>
+        </div>
         <div class="ui menu">
             <div id="select-category" class="ui dropdown item">
                 <div class="text">
