--- a/app/templates/task/new_document.html
+++ b/app/templates/task/new_document.html
@@ -10,17 +10,7 @@
             <div class="sub header">Create a new url based document</div>
         </h2>
 
-        {% set flashes = { 'error': get_flashed_messages(category_filter=['form-error']), 'warning': get_flashed_messages(category_filter=['form-check-email']),
-        'info': get_flashed_messages(category_filter=['form-info']), 'success': get_flashed_messages(category_filter=['form-success'])
-        } %} {{ f.begin_form(form, flashes) }} {{ f.render_form_field(form.theme) }} {{ f.render_form_field(form.category)
-        }} {{ f.render_form_field(form.link) }}
-        <div class="two fields">
-            {{ f.render_form_field(form.priority) }}
-        </div>
-        <br/>
-
-        {% for field in form | selectattr('type', 'equalto', 'SubmitField') %} {{ f.render_form_field(field) }} {% endfor %} {{ f.end_form()
-        }}
+        {{ f.render_form(form) }}
     </div>
 </div>
 {% endblock %}
