--- a/app/templates/task/document_dashboard.html
+++ b/app/templates/task/document_dashboard.html
@@ -67,7 +67,11 @@
                     <td class="doc category">{{ d.category }}</td>
                     <td>
                         <div class="ui small basic icon buttons">
-                            <button class="ui button"><i class="edit outline icon"></i></button>
+                            <button class="ui button">
+                                <a class="item" href="{{ url_for('task.update_doc_meta', doc_meta_id= d.id|string) }}">
+                                    <i class="edit outline icon"></i>
+                                </a>
+                            </button>
                             <button class="ui button">
                                 <a class="item" href="{{ url_for('task.delete_doc_meta', doc_meta_id= d.id|string) }}">
                                     <i class="trash outline icon"></i>
@@ -105,6 +109,9 @@
             }
         });
     });
+
+
+
 
 
 
