--- a/app/templates/task/manage_document.html
+++ b/app/templates/task/manage_document.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %} {% import 'macros/form_macros.html' as f %} {% block content %}
 <div class="ui stackable centered grid container">
     <div class="twelve wide column">
-        <a class="ui basic compact button" href="{{ url_for('task.get_my_doc_meta') }}">
+        <a class="ui basic compact button" href="{{ url_for('task.my_doc_meta') }}">
             <i class="caret left icon"></i>
             Back to Document List
         </a>
