--- a/app/templates/task/document_dashboard.html
+++ b/app/templates/task/document_dashboard.html
@@ -25,7 +25,7 @@
                 </div>
                 <i class="dropdown icon"></i>
                 <div class="menu">
-                    <div class="item" data-value="">{{ all_category }}</div>
+                    <div class="item" data-value="{{ all_category }}">{{ all_category }}</div>
                     {% for c in categories %}
                     <div class="item" data-value="{{ c.name }}">{{ beautify_static(c.name) }}</div>
                     {% endfor %}
