--- a/app/templates/task/task_macros.html
+++ b/app/templates/task/task_macros.html
@@ -1,10 +1,10 @@
 {# Macro for creating navigation links #}
-{% macro render_navigation(pagination, endpoint, arguments) %}
+{% macro render_navigation(pagination, endpoint, category, search) %}
     <div class="ui pagination menu">
         {% for page in pagination.iter_pages() %}
             {% if page %}
                 {% if page != pagination.page %}
-                    <a class="item" href="{{ url_for(endpoint, category=arguments, page=page) }}">{{ page }}</a>
+                    <a class="item" href="{{ url_for(endpoint, category=category, search=search, page=page) }}">{{ page }}</a>
                 {% else %}
                     <a class="active item">{{ page }}</a>
                 {% endif %}
