:new: add time to my documents page

--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -4,8 +4,9 @@
 <html>
     <head>
         {% include 'partials/_head.html' %}
-        {# Any templates that extend this template can set custom_head_tags to add scripts to their page #}
-        {% block custom_head_tags %}{% endblock %}
+        {% block scripts %}
+            {{ moment.include_moment() }}
+        {% endblock %}
     </head>
     <body>
       {# Example dropdown menu setup. Uncomment lines to view
