--- a/app/templates/task/document_dashboard.html
+++ b/app/templates/task/document_dashboard.html
@@ -26,7 +26,7 @@
                 <i class="dropdown icon"></i>
                 <div class="menu">
                     <div class="item" data-value="{{ all_category }}">{{ all_category }}</div>
-                    {% for cname in categories.values() %}
+                    {% for cname in categories %}
                     <div class="item" data-value="{{ cname }}">{{ beautify_static(cname) }}</div>
                     {% endfor %}
                 </div>
